--- a/community_map.css
+++ b/community_map.css
@@ -117,6 +117,11 @@ html, body, #map {
 .community-popup ul.contacts li.contact a.button.youtube {
  background-position: 0px -360px;
 }
+
+.community-popup img.logo {
+ height: 64px;
+ 
+}
 /* /community-popup */
 
 
